client/src/index.css
/* ... */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Karla', sans-serif;
  font-weight: 700;
  margin: 5px 0;
  line-height: 1.25;
}

h1 {
  font-size: 2.25rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1.5rem;
}

h5 {
  font-size: 1.25rem;
}

h6 {
  font-size: 1rem;
}

p {
  font-size: 1.1rem;
  margin-top: 0;
}

a {
  color: var(--dark);
  text-decoration: none;
}

a:visited {
  color: inherit;
}

nav {
  width: 100%;
  justify-content: center;
}

nav a {
  padding: 6px 10px;
  margin: 0 15px;
  transition: all 0.2s;
}

nav a:hover {
  color: var(--secondary);
  background-color: var(--dark);
}

.page-title {
  text-align: center;
  width: 100%;
  margin: 0;
  font-size: 2.5rem;
}


.pLogin-Signup{
  position: absolute;
  bottom: 5%;
  text-align: center;
}

.lineBreak{
  /* border-right: 5px solid black; */
}

.btn,
.pill {
  height: 8vh;
  font-size: 1rem;
  text-decoration: none;
  /* padding: 0.5rem 1.2rem; */
  margin: 5px 0;
  border-radius: var(--border-radius);
  border: none;
  color: var(--dark);
  outline: none;
  background-color: var(--secondary);
  transition: all 0.5s;
}

.login-signup{
  height: 50vh;
  font-size: 12px;
}

.btn:hover,
.pill:hover {
  color: var(--secondary);
  background-color: var(--dark);
}

.btn:hover a,
.pill:hover a {
  color: var(--secondary);
}

.btn-inline {
  display: inline;
}

/* CARDS */
.card {
  margin: 0 0 20px 0;
  border: 3px solid var(--dark);
  border-radius: var(--border-radius);
  background-color: var(--light);
  color: var(--dark);
}

.card-header {
  color: var(--secondary);
  margin: 0;
  background-color: var(--dark);
  padding: 0.625rem;
  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
}

.card-body {
  padding: 2.5%;
  font-size: 1.4rem;
}

.dot {
  height: 100px;
  width: 100px;
  background-color: #bbb;
  border-radius: 50%;
  display: flex;
  text-align: center;
  align-items: center; 
  justify-content: center;
}

.anime-card-height{
  height: 60vh;
  width: 50%;
}

/* FORM */
.form-label,
.form-input,
.form-textarea {
  display: block;
}

.form-label {
  font-size: 1.2rem;
  margin: 0.625rem 0 0.25rem;
}

.form-input {
  width: 100%;
  padding: 0.75rem;
  margin: 0.2rem 0;
  font-size: 1.2rem;
  border: 2px solid var(--dark);
  border-radius: var(--border-radius);
}

.divHeight{
  height: 200px;
}

[type='radio']:checked,
[type='radio']:not(:checked) {
  position: absolute;
  left: -9999px;
}
[type='radio']:checked + label,
[type='radio']:not(:checked) + label {
  position: relative;
  padding-left: 25px;
  cursor: pointer;
  line-height: 20px;
  display: inline-block;
  color: var(--secondary);
  margin-right: 0.2rem;
}

[type='radio']:checked + label:before,
[type='radio']:not(:checked) + label:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 18px;
  height: 18px;
  border: 2px solid var(--secondary);
  border-radius: 100%;
  background: #fff;
}
[type='radio']:checked + label:after,
[type='radio']:not(:checked) + label:after {
  content: '';
  width: 12px;
  height: 12px;
  background-color: var(--secondary);
  position: absolute;
  top: 5px;
  left: 5px;
  border-radius: 100%;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

[type='radio']:not(:checked) + label:after {
  opacity: 0;
  -webkit-transform: scale(0);
  transform: scale(0);
}

[type='radio']:checked + label:after {
  opacity: 1;
  -webkit-transform: scale(1);
  transform: scale(1);
}

/* LAYOUT */
.container {
  width: 85%;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

.container-fluid {
  width: 92%;
}

.favAnime{
  position: relative;
}

.favAnimeImg{
  border-radius: 5%;
}

.btn-anime{
  display: block;
  margin: 0;
  overflow: hidden;
  padding: 0;
  text-align: center;
  padding: 0;
}

.btn-anime :hover{
  opacity: 0.7;
}

.spanFavAnimesTitle{
  padding: 15px 5px 5px;
  width: calc(100% - 5px - 5px);
}

.favAnimeContainer{
  position: relative;
}

.h3FavAnimesTitle{
  background-color: rgba(0, 0, 0, .8);
  font-size: small;
  position: absolute;
  bottom: 0px;
  color: white;
  text-align: center;
  display: inline-block;
  width:100%;
  overflow:hidden;
}

/* DISPLAY */
.display-none {
  display: none;
}

.display-block {
  display: block;
}

.display-inline-block {
  display: inline-block;
}

.display-inline {
  display: inline;
}

/* HEIGHT / WIDTH UTILS */
.w-100 {
  width: 100%;
}

.w-75 {
  width: 75%;
}

.w-50 {
  width: 50%;
}

.w-25 {
  width: 25%;
}

.min-100-vh {
  min-height: 100vh;
}

.min-100-vw {
  min-width: 100vw;
}

/* MARGIN/PADDING UTILS */

/* Margin - all sides */
.m-0 {
  margin: 0;
}

.m-1 {
  margin: var(--spacing-one);
}

.m-2 {
  margin: var(--spacing-two);
}

.m-3 {
  margin: var(--spacing-three);
}

.m-4 {
  margin: var(--spacing-four);
}

.m-5 {
  margin: var(--spacing-five);
}

.m-auto {
  margin: auto;
}

/* Margin-bottom */

.mb-0 {
  margin-bottom: 0;
}

.mb-1 {
  margin-bottom: var(--spacing-one);
}

.mb-2 {
  margin-bottom: var(--spacing-two);
}

.mb-3 {
  margin-bottom: var(--spacing-three);
}

.mb-4 {
  margin-bottom: var(--spacing-four);
}

.mb-5 {
  margin-bottom: var(--spacing-five);
}

.mb-auto {
  margin-bottom: auto;
}

/* Margin-top */

.mt-0 {
  margin-top: 0;
}

.mt-1 {
  margin-top: var(--spacing-one);
}

.mt-2 {
  margin-top: var(--spacing-two);
}

.mt-3 {
  margin-top: var(--spacing-three);
}

.mt-4 {
  margin-top: var(--spacing-four);
}

.mt-5 {
  margin-top: var(--spacing-five);
}

.mt-auto {
  margin-top: auto;
}

/* Margin-right */

.mr-0 {
  margin-right: 0;
}

.mr-1 {
  margin-right: var(--spacing-one);
}

.mr-2 {
  margin-right: var(--spacing-two);
}

.mr-3 {
  margin-right: var(--spacing-three);
}

.mr-4 {
  margin-right: var(--spacing-four);
}

.mr-5 {
  margin-right: var(--spacing-five);
}

.mr-auto {
  margin-right: auto;
}

/* Margin-left */

.ml-0 {
  margin-left: 0;
}

.ml-1 {
  margin-left: var(--spacing-one);
}

.ml-2 {
  margin-left: var(--spacing-two);
}
/* ... */

